fix(wink-nlp): scrolling menu on mobile

--- a/source/wink-nlp/styles/jsdoc.css
+++ b/source/wink-nlp/styles/jsdoc.css
@@ -771,6 +771,7 @@ html[data-search-mode] .level-hide {
   nav.is-open {
     opacity: 1;
     top: 65px;
+    overflow-y: auto;
   }
 
   .navicon-button {
